##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-11-13	tboggs <tboggs@users.sourceforge.net>

    Major change to `imshow` and `ImageView` to support additional display
    modes and interactivity (e.g. zoom windows, adjustable class alpha
    transparency).

    * graphics/spypylab.py:
      (MplCallback): New base class for callback classes.
      (ImageViewCallback): New base class for ImageView callbacks.
      (ParentViewPanCallback): New class to pan an image, based on click
      events in another image window.
      (ImageView): Support showing data, classes, or data with overlayed
      classes. Supports mouse and keyboard event handlers.
      (imshow): Supports updated ImageView class.

2013-11-05	tboggs <tboggs@users.sourceforge.net>

    Minor improvement to matrix_sqrt and added associated unit tests.

    * algorithms/spymath.py (matrix_sqrt): added optional `inverse` arg.
    * tests/__init__.py: Include spymath testing module
    * tests/spymath.py: New file.

2013-11-02	tboggs <tboggs@users.sourceforge.net>

    Added `cov` keyword to `rx` function.

    * algorithms/detectors.py:
      (RXW.__init__): Accept `cov` keyword
      (RXW.__call__): Use optional covariance.
      (rx): Accept `cov` keyword.

    Added ImageView class for imshow wrapper.

    * graphics/__init__.py: Import imshow from spypylab.
    * graphics/spypylab.py:
      (ImageView): New class
      (imshow): Moved from graphics.py. Added `parent` keyword for
        implementing zoom windows.

2013-09-06	tboggs <tboggs@users.sourceforge.net>

    Updated version to 0.12

2013-09-06	tboggs <tboggs@users.sourceforge.net>

    Allow calling `envi.create_image` with keyword args instead of a metadata
    dict using ENVI-specific parameter names.

    * io/envi.py:
      (gen_params): Cast data type to str.